// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`simple markdown 1`] = `
"import React, { useState } from \\"react\\";

function Usage(props) {
  return (
    <div className=\\"markdown-body ac-usage\\" style={props.style}>
      <h1 id=\\"usage\\">Usage</h1>
      <p>This is usage</p>
    </div>
  );
}

import {
  CodeBlockWrapper,
  CellCode,
  CellDemo,
  CellDescription,
  Browser,
  Changelog,
} from \\"arco-doc-site-components\\";
import {
  Radio as NavRadio,
  Button as ChangelogBtn,
  Drawer as ChangelogDrawer,
} from \\"@arco-design/web-react\\";
const changelog = [];
const Demo0 = React.memo(() => {
  import { Button } from \\"@arco-design/web-react\\";
  ReactDOM.render(<Button />, CONTAINER);
  return __export;
});
const Demo1 = React.memo(() => {
  import { Button } from \\"@arco-design/web-react\\";
  ReactDOM.render(<Button size=\\"mini\\" />, CONTAINER);
  return __export;
});

class Component extends React.Component {
  render() {
    return React.createElement(
      \\"span\\",
      {
        className: \\"arco-components-wrapper\\",
        style: this.props.style,
      },
      React.createElement(Demo0, {
        key: 0,
      }),
      React.createElement(Demo1, {
        key: 1,
      })
    );
  }
}

export default function (props) {
  const [isUsage, setIsUsage] = useState(false);
  const [showChangelog, setShowChangelog] = useState(false);
  const lang = localStorage.getItem(\\"arco-lang\\") || \\"zh-CN\\";
  return (
    <span style={props.style}>
      <span className=\\"markdown-body\\">
        <pre>
          <code>
            Component <span className=\\"token operator\\">/</span> General
            <br />
            <br /># Button
            <br />
            <br />
            Button component。
          </code>
        </pre>
      </span>
      <>
        <div className=\\"ac-toolbar\\">
          <NavRadio.Group
            options={[
              {
                label: lang === \\"en-US\\" ? \\"Component\\" : \\"组件\\",
                value: \\"component\\",
              },
              {
                label: lang === \\"en-US\\" ? \\"Usage\\" : \\"用法\\",
                value: \\"usage\\",
              },
            ]}
            onChange={(value) => setIsUsage(value === \\"usage\\")}
            type=\\"button\\"
            value={isUsage ? \\"usage\\" : \\"component\\"}
            size=\\"large\\"
          />
          <ChangelogBtn
            aria-label=\\"Changelog\\"
            size=\\"large\\"
            className=\\"changelog-btn\\"
            onClick={() => setShowChangelog(true)}
          >
            {lang === \\"en-US\\" ? \\"Changelog\\" : \\"更新记录\\"}
          </ChangelogBtn>
        </div>

        <Usage
          style={
            !isUsage
              ? {
                  display: \\"none\\",
                }
              : {}
          }
        />
        <Component
          style={
            isUsage
              ? {
                  display: \\"none\\",
                }
              : {}
          }
        />
        <ChangelogDrawer
          title=\\"发版记录\\"
          visible={showChangelog}
          onOk={() => setShowChangelog(false)}
          onCancel={() => setShowChangelog(false)}
          width={800}
        >
          <Changelog changelog={changelog} />
        </ChangelogDrawer>
      </>
      <span
        className=\\"markdown-body api-container\\"
        style={
          isUsage
            ? {
                display: \\"none\\",
              }
            : {}
        }
      ></span>
    </span>
  );
}
"
`;

exports[`simple markdown 2`] = `
"import React, { useState } from \\"react\\";

function Usage(props) {
  return (
    <div className=\\"markdown-body ac-usage\\" style={props.style}>
      <h1 id=\\"用法\\">用法</h1>
      <p>这是用法。</p>
    </div>
  );
}

import {
  CodeBlockWrapper,
  CellCode,
  CellDemo,
  CellDescription,
  Browser,
  Changelog,
} from \\"arco-doc-site-components\\";
import {
  Radio as NavRadio,
  Button as ChangelogBtn,
  Drawer as ChangelogDrawer,
} from \\"@arco-design/web-react\\";
const changelog = [];
const Demo0 = React.memo(() => {
  import { Button } from \\"@arco-design/web-react\\";
  ReactDOM.render(<Button />, CONTAINER);
  return __export;
});
const Demo1 = React.memo(() => {
  import { Button } from \\"@arco-design/web-react\\";
  ReactDOM.render(<Button size=\\"mini\\" />, CONTAINER);
  return __export;
});

class Component extends React.Component {
  render() {
    return React.createElement(
      \\"span\\",
      {
        className: \\"arco-components-wrapper\\",
        style: this.props.style,
      },
      React.createElement(Demo0, {
        key: 0,
      }),
      React.createElement(Demo1, {
        key: 1,
      })
    );
  }
}

export default function (props) {
  const [isUsage, setIsUsage] = useState(false);
  const [showChangelog, setShowChangelog] = useState(false);
  const lang = localStorage.getItem(\\"arco-lang\\") || \\"zh-CN\\";
  return (
    <span style={props.style}>
      <span className=\\"markdown-body\\">
        <pre>
          <code>
            组件 <span className=\\"token operator\\">/</span> 通用
            <br />
            <br /># 按钮 Button
            <br />
            <br />
            按钮组件。
          </code>
        </pre>
      </span>
      <>
        <div className=\\"ac-toolbar\\">
          <NavRadio.Group
            options={[
              {
                label: lang === \\"en-US\\" ? \\"Component\\" : \\"组件\\",
                value: \\"component\\",
              },
              {
                label: lang === \\"en-US\\" ? \\"Usage\\" : \\"用法\\",
                value: \\"usage\\",
              },
            ]}
            onChange={(value) => setIsUsage(value === \\"usage\\")}
            type=\\"button\\"
            value={isUsage ? \\"usage\\" : \\"component\\"}
            size=\\"large\\"
          />
          <ChangelogBtn
            aria-label=\\"Changelog\\"
            size=\\"large\\"
            className=\\"changelog-btn\\"
            onClick={() => setShowChangelog(true)}
          >
            {lang === \\"en-US\\" ? \\"Changelog\\" : \\"更新记录\\"}
          </ChangelogBtn>
        </div>

        <Usage
          style={
            !isUsage
              ? {
                  display: \\"none\\",
                }
              : {}
          }
        />
        <Component
          style={
            isUsage
              ? {
                  display: \\"none\\",
                }
              : {}
          }
        />
        <ChangelogDrawer
          title=\\"发版记录\\"
          visible={showChangelog}
          onOk={() => setShowChangelog(false)}
          onCancel={() => setShowChangelog(false)}
          width={800}
        >
          <Changelog changelog={changelog} />
        </ChangelogDrawer>
      </>
      <span
        className=\\"markdown-body api-container\\"
        style={
          isUsage
            ? {
                display: \\"none\\",
              }
            : {}
        }
      ></span>
    </span>
  );
}
"
`;
